--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,15 +18,9 @@ body, html, .App, #root, .outer {
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
 }
 
-.outer {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: left;
-}
-
 .inner {
-    width: 450px;
+    max-width: 450px;
+    width: 45%;
     margin: auto;
     background: #ffffff;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
@@ -35,12 +29,12 @@ body, html, .App, #root, .outer {
     transition: all .3s;
 }
 
-.outer .form-control:focus {
+.inner .form-control:focus {
     border-color: #167bff;
     box-shadow: none;
 }
 
-.outer h3 {
+.inner h3 {
     text-align: center;
     margin: 0;
     line-height: 1;
@@ -65,4 +59,13 @@ body, html, .App, #root, .outer {
 
 nav {
     margin-bottom: 15px;
+}
+
+
+
+@media (max-width: 700px) {
+    .inner {
+        width: 80%;
+        padding: 20px 35px 20px 35px;
+    }
 }
