--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,11 +61,24 @@ nav {
     margin-bottom: 15px;
 }
 
-
+.inner-form {
+    width: 70%;
+    margin: auto;
+    background: #ffffff;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 35px 50px 35px 50px;
+    border-radius: 15px;
+    transition: all .3s;
+}
 
 @media (max-width: 700px) {
     .inner {
         width: 80%;
+        padding: 20px 35px 20px 35px;
+    }
+
+    .inner-form {
+        width: 100%;
         padding: 20px 35px 20px 35px;
     }
 }
