Modal Added Delete Implemented

--- a/client/src/style/sidebar.css
+++ b/client/src/style/sidebar.css
@@ -27,7 +27,7 @@
     width: 100%;
 }
 .space:hover {
-    background-color: #0000CD;
+    background-color: #3282ff;
     color: #fff;
     text-decoration: none;
 }
