--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,6 +99,11 @@ table {
     max-width: 750px;
 }
 
+.card-header {
+    background-color: rgba(0, 0, 0, 0.07);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
 @media (max-width: 700px) {
     .inner {
         width: 80%;
